--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,121 @@
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-ul { list-style: none; padding-left: 5px; }
-a { color:blue; text-decoration: none;}
-.bar {
-    background-color: #f9f9fb;
-    padding:15px;
-    border-top: solid 1px #cdcdcd;
-    border-bottom: solid 1px #cdcdcd;
+
+ul {
+    list-style: none;
+    padding-left: 5px;
 }
-.content {
-    max-width: 1440px;
-    margin: auto;
-    grid-gap: 3rem;
-    display: grid;
-    gap: 3rem;
-    grid-template-areas: "sidebar main anchors";
-    grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
-    padding-left: 1rem;
-    padding-right: 1rem;
+
+a {
+    color: blue;
+    text-decoration: none;
 }
-.footer {
-    min-height: 100px;
-    border-top: solid 1px #cdcdcd;
+
+
+.logoheader {
+    position: fixed;
+    width: 100%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    top: 0;
+    margin: 0;
 }
-.anchors {
-    border-left: solid 1px #cdcdcd;
-    padding-left: 15px;
+.logoheader .bar {   
+    
+    width: 100%;
+    background-color: #ccc;
+    padding: 10px;
+    border-top: solid 1px #ccc;
+    border-bottom: solid 1px #ccc;
 }
+
 .sidebar {
-    border-right: solid 1px #cdcdcd;
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 60%;
+    width: 100%;
+    margin: 190px 0 0 0;
+    padding: 0px 10px 60px 10px;
 }
+
+.sideleft ul>li:hover {
+    border: 1px solid rgba(21, 0, 0, 0.8);
+    background-color: rgba(190, 0, 0, 0.3);
+    border-top-left-radius: 40%;
+    border-bottom-right-radius: 40%;
+    width: 180px;
+}
+
+.maincontent {      
+    display: flex;
+    width: 78%;
+    height: 640px;
+    margin: 190px 0 0 220px;
+    flex-direction: column;
+    overflow: auto;  
+}
+.main{
+    z-index: 99;
+}
+.main h1 {
+    text-align: center;
+}
+
+.main p {
+    text-align: left;
+}
+main h3{
+    border-bottom: 1px solid #ccc;
+}
+.logoheader img {
+    width: 200px;
+    height: 150px;
+}
+.main pre{
+    background-color: rgba(0, 0, 0, 0.1);
+    border-left: 10px solid rgb(255, 0, 25);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.border {
+    border: 5px solid red;
+}
+
+.sideleft {
+    flex-direction: column;
+    width: 200px;
+    border-right: solid 1px #ccc;
+}
+
+.sideright {
+    align-items: end;
+    border-left: solid 1px #ccc;
+    width: 200px;
+}
+
+footer {
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    min-height: 50px;
+    border-top: solid 1px blue;
+}
+
 figure {
     text-align: center;
+}
+figure img{
+    width: 500px;
+    height: 400px;
 }
